--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Predictionpackr
 Version: 0.1.0
 Author: Celina Lindgren
-Maintainer: 
+Maintainer: Celina Lindgren
 Description: Package including all functions used in the project "Prediction models vs. clinicians"
 License: What license is it under?
 Encoding: UTF-8
